--- a/birdscan-frontend/src/index.css
+++ b/birdscan-frontend/src/index.css
@@ -1,17 +1,51 @@
 @import url('https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
 
 :root{
-  --primary-color: #0BA2C1;
-  --secondary-color: #2AAE6C;
-  --header_footer-color: #004D73;
-  --details-color: #F8AA1B;
-  --text-color: #333333;
-  --background-color: #F5F5F5;
+  /* Neutrales */
+  --color-bg: #F5F5F5;
+  --color-surface: #FFFFFF;
+  --color-text-primary: #333333;
+  --color-text-secondary: #555555;
 
+  /* Acentos */
+  --color-primary: #0BA2C1;
+  --color-secondary: #2AAe6C; 
+  --color-details: #F8C227;
+
+  /* Hover */
+  --color-primary-hover: #1877C6;
+  --color-secondary-hover: #24985A;
+  --color-details-hover: #E0A018;
+
+  /*Header/Footer*/
+  --color-header-footer: #004D73;
+}
+
+[data-theme='dark']{
+  /*Neutrales*/
+
+  --color-bg: #121212;
+  --color-surface: #1E1E1E;
+  --color-text-primary: #E0E0E0;
+  --color-text-secondary: #B0B0B0;
+
+  /* Acentos */
+
+  --color-primary: #1E90FF;
+  --color-secondary: #2AAE6C; 
+  --color-details: #F8C227;
+
+    /* Hover */
+  --color-primary-hover: #3EAFFF;
+  --color-secondary-hover: #4DCB88;
+  --color-details-hover: #FFD14F;
+  
+  /*Header/Footer*/
+  --color-header-footer: #003049;
 }
 
 body {
-  background-color: var(--background-color);
+  background-color: var(--color-bg);
 }
 
 * {
