--- a/birdscan-frontend/src/components/Main/CTASection.css
+++ b/birdscan-frontend/src/components/Main/CTASection.css
@@ -8,7 +8,7 @@
 .CTA_section-container{
     width: 1704px;
     height: 441px;
-    background-color: var(--primary-color);
+    background-color: var(--color-primary);
     display: flex;
     align-items: center;
     justify-content: space-evenly;
@@ -17,7 +17,7 @@
 .CTA_section-h2{
     font-size: 38px;
     font-weight: 600;
-    color: var(--background-color);
+    color: var(--color-surface);
     width: 552px;
 
 }
@@ -25,7 +25,7 @@
 .CTA_section-p{
     font-size: 20px;
     font-weight: 300;
-    color: var(--background-color);
+    color: var(--color-surface);
     width: 800px;
 }
 
@@ -34,9 +34,9 @@
     height: 80px;
     font-size: 20px;
     font-weight: 700;
-    color: var(--background-color);
+    color: var(--color-surface);
     border-radius: 20px;
-    border: 2px solid var(--background-color);
+    border: 2px solid var(--color-surface);
     display: flex;
     align-items: center;
     justify-content: center;
@@ -45,5 +45,5 @@
 }
 
 .CTA_section-button:hover{
-    background-color: var(--secondary-color);
+    background-color: var(--color-secondary-hover);
 }
