--- a/birdscan-frontend/src/components/Main/Footer.css
+++ b/birdscan-frontend/src/components/Main/Footer.css
@@ -1,5 +1,5 @@
 .footer_section-container{
-    background-color: var(--header_footer-color);
+    background-color: var(--color-header-footer);
     display: flex;
     justify-content: space-around;
     align-items: center;
@@ -24,7 +24,7 @@
     font-family: 'Montserrat';
     font-size: 20px;
     font-weight: 400;
-    color: var(--background-color);
+    color: var(--color-details);
 }
 
 .icons_container{
@@ -36,7 +36,7 @@
 .icon_socialmedia-container{
     width: 50px;
     height: 50px;
-    background-color: var(--secondary-color);
+    background-color: var(--color-secondary);
     border-radius: 10px;
     display: flex;
     justify-content: center;
@@ -52,7 +52,7 @@
 }
 
 .icon_socialmedia-container:hover{
-    background-color: var(--details-color);
+    background-color: var(--color-details-hover);
 }
 
 .nav_section{
@@ -63,7 +63,7 @@
 
 .footer_navigation-links{
     position: relative;
-    color: var(--background-color);
+    color: var(--color-text-primary);
     margin-bottom: 15px;
     font-family: 'Poppins';
     font-size: 18px;
@@ -72,7 +72,7 @@
 }
 
 .footer_navigation-links:hover{
-    color: var(--details-color);
+    color: var(--color-details-hover);
 }
 
 .footer_navigation-links::before{
@@ -82,13 +82,13 @@
     left: 0;
     width: 0;
     height: 2px;
-    background: var(--details-color);
+    background: var(--color-details-hover);
     transition: 0.3s;
 }
 
 .footer_navigation-links:hover::before{
     width: 100%;
-    color: var(--details-color);
+    color: var(--color-details-hover);
 }
 
 .contact_section{
@@ -99,7 +99,7 @@
 }
 
 .footer_section-tittle{
-    color: var(--background-color);
+    color: var(--color-details);
     font-size: 26px;
     font-weight: 500;
 }
@@ -108,7 +108,7 @@
     font-size: 20px;
     font-weight: 700;
     font-family: 'Montserrat';
-    color: var(--background-color);
+    color: var(--color-details);
 }
 
 .footer_contact-p-tittle{
@@ -116,7 +116,7 @@
     font-size: 20px;
     font-weight: 300;
     font-family: 'Montserrat';
-    color: var(--background-color)
+    color: var(--color-details)
 }
 
 .footer_contact-p-tittle::before{
@@ -126,11 +126,11 @@
     left: 0;
     width: 100%;
     height: 1px;
-    background: var(--background-color);
+    background: var(--color-details);
 }
 
 .container_copyright-text{
-    background-color: var(--header_footer-color);
+    background-color: var(--color-header-footer);
     display: flex;
     justify-content: center;
     align-items: center;
@@ -138,7 +138,7 @@
 
 .copyright_text-content{
     position: relative;
-    color: var(--background-color);
+    color: var(--color-details);
     font-family: 'Montserrat';
     font-size: 20px;
     font-weight: 300;
@@ -158,6 +158,6 @@
     left: 0;
     width: 100%;
     height: 1px;
-    background-color: var(--background-color);
+    background-color: #F5F5F5;
 }
 
