--- a/birdscan-frontend/src/components/Main/Hero.css
+++ b/birdscan-frontend/src/components/Main/Hero.css
@@ -26,7 +26,7 @@
 }
 
 .hero_content {
-    color: var(--background-color);
+    color: #F5F5F5;
     text-align: left;
     max-width: 820px;
     z-index: 2;
@@ -53,16 +53,16 @@
 }
 
 .primary_button {
-    background: var(--primary-color);
+    background: var(--color-primary);
 }
 
 .secondary_button{
-    background-color: var(--secondary-color);
+    background-color: var(--color-secondary);
 }
 
 .primary_button:hover {
-    background-color: var(--details-color);
-    color: var(--header_footer-color);
+    background-color: var(--color-details);
+    color: var(--color-primary);
 }
 
 .secondary_button:hover {
