--- a/birdscan-frontend/src/components/Main/WhyBS.css
+++ b/birdscan-frontend/src/components/Main/WhyBS.css
@@ -1,4 +1,5 @@
 .whyBS_section{
+    margin-top: 50px;
     display: flex;
     flex-direction: column;
     justify-content: center;
@@ -8,7 +9,7 @@
 .h2_whyBS_section {
     font-size: 38px;
     font-weight: 600;
-    color: var(--primary-color);
+    color: var(--color-primary);
     text-align: center;
     display: flex;
     justify-content: center;
@@ -35,29 +36,30 @@
     width: 408px;
     height: 408px;
     border-radius: 20px;
-    background-color: var(--background-color);
+    background-color: var(--color-surface);
     box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
     padding: 20px;
     text-align: center;
 }
 
 .tags_container img{
-    width: 180px;      /* Ajusta el tamaño según tu diseño */
+    width: 180px;
     height: 180px;
     object-fit: contain;
     display: block;
-    margin: 0 auto 16px auto; /* Centra y agrega espacio abajo */
+    margin: 0 auto 16px auto; 
+    background-color: var(--color-surface);
 }
 
 h3 {
     font-size: 24px;
     font-weight: 600;
-    color: var(--secondary-color);
+    color: var(--color-primary);
     margin-bottom: 12px;
 }
 
 p{
     font-size: 18px;
     font-weight: 400;
-    color: var(--text-color);
+    color: var(--color-text-primary);
 }
