--- a/birdscan-frontend/src/components/User/LogInSection.css
+++ b/birdscan-frontend/src/components/User/LogInSection.css
@@ -2,6 +2,7 @@
     display: flex;
     width: 100vw;
     height: calc(100vh - 134px);
+    min-height: 700px;
     position: relative;
 
 }
@@ -56,7 +57,8 @@
 
 .h1_login-section {
     font-family: 'Poppins';
-    font-size: 64px;
+    font-size: 38px;
+    font-weight: 600;
     color: var(--color-primary);
     width: auto;
     text-align: center;
@@ -77,24 +79,6 @@
     font-family: 'Montserrat';
     font-size: 20px;
     font-weight: 400;
-}
-
-.input_container input {
-    width: 100%;
-    padding: 0.8rem 0.8rem 0.8rem 3rem;
-    border-radius: 20px;
-    border: none;
-    box-shadow: 0 4px 6px rgba(0,0,0,0.1);
-    font-family: 'Montserrat';
-    font-size: 20px;
-    outline: none;
-    background-color: #eeeeee;
-    transition: box-shadow 0.3s ease;
-}
-
-
-.input_container input {
-    box-shadow: 0 6px 10px rgba(0, 0, 0, 0.15);
 }
 
 .input_container {
