--- a/birdscan-frontend/src/components/Main/Hero.css
+++ b/birdscan-frontend/src/components/Main/Hero.css
@@ -4,6 +4,7 @@
     left: 0;
     width: 100vw;
     height: 100vh;
+    min-height: 1080px;
     background-image: url('/src/assets/Guardabarranco.jpg');
     background-size: cover;
     background-position: center;
