--- a/birdscan-frontend/src/components/Main/MapsSection.css
+++ b/birdscan-frontend/src/components/Main/MapsSection.css
@@ -11,7 +11,13 @@
     display: flex;
     width: 1152px;
     height: 671px;
-    background-color: var(--color-primary)
+    background-color: var(--color-primary);
+}
+
+.maps-container img{
+    width: 100%;
+    height: 100%;
+    object-fit: contain;
 }
 
 .maps_content-container{
