--- a/birdscan-frontend/src/components/Main/Hero.css
+++ b/birdscan-frontend/src/components/Main/Hero.css
@@ -1,4 +1,3 @@
-
 .hero {
     top: 0;
     left: 0;
@@ -14,15 +13,16 @@
     z-index: 1;
 }
 
-.hero:before{
+.hero:before {
     content: '';
     position: absolute;
-    top: 0; left: 0; right: 0; bottom: 0;
-    background: linear-gradient(
-        to right,
-        rgba(51, 51, 51, 1) 0%,
-        rgba(255, 255, 255, 0.1) 100%
-    );
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    background: linear-gradient(to right,
+            rgba(51, 51, 51, 1) 0%,
+            rgba(255, 255, 255, 0.1) 100%);
     opacity: 0.5;
     z-index: 1;
 }
@@ -34,51 +34,76 @@
     z-index: 2;
 }
 
-.hero_actions{
+.hero_actions {
     display: flex;
+    flex-wrap: wrap;
+    gap: 20px;
+    margin: 30px 0;
     justify-content: center;
 }
-.primary_button, .secondary_button {
-    display: flex;
-    width: 250px;
-    height: 70px;
-    font-size: 1.25rem;
-    border: none;
-    border-radius: 10px;
-    cursor: pointer;
-    margin: 10px;
-    transition: background-color 0.3s, color 0.3s;
-    color: var(--background-color);
-    font-weight: 700;
+
+/* Botón base */
+.primary_button,
+.secondary_button,
+.birdscan_use_button {
+    display: inline-flex;
     align-items: center;
     justify-content: center;
+    width: 260px;
+    height: 70px;
+    font-size: 1.25rem;
+    font-weight: 700;
+    text-decoration: none;
+    text-align: center;
+    border: none;
+    border-radius: 12px;
+    cursor: pointer;
+    transition: background-color 0.3s ease, color 0.3s ease, transform 0.2s ease;
+    color: var(--color-text-primary);
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
 }
+
 
 .primary_button {
-    background: var(--color-primary);
-}
-
-.secondary_button{
-    background-color: var(--color-secondary);
+    background-color: var(--color-primary);
 }
 
 .primary_button:hover {
     background-color: var(--color-details);
     color: var(--color-primary);
+    transform: translateY(-2px);
+}
+
+.secondary_button {
+    background-color: var(--color-secondary);
 }
 
 .secondary_button:hover {
-    background-color:#288757;
+    background-color: var(--color-secondary-hover);
+    transform: translateY(-2px);
 }
 
-h1{
+.birdscan_use_button {
+    background-color: var(--color-details);
+    margin: 20px auto;
+    display: flex;
+    colo: var(--color-text-secondary)
+}
+
+.birdscan_use_button:hover {
+    background-color: var(--color-primary);
+    color: var(--color-text-primary);
+    transform: translateY(-2px);
+}
+
+h1 {
     font-size: 4rem;
     margin-bottom: 20px;
     margin-left: 136px;
     font-weight: 700;
 }
 
-.h2_hero_section{
+.h2_hero_section {
     font-size: 2.38rem;
     margin-bottom: 40px;
     margin-left: 136px;
